BASE64Encoder
Substituição por java.util.Base64, com o objetivo de diminuir variáveis e manter compatibilidade com javas atuais